--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "framer-motion": "^11.3.27",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "scrollreveal": "^4.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
