--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.0",
     "scrollreveal": "^4.0.9"
   },
