--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
@@ -22,6 +23,7 @@
     "framer-motion": "^11.3.28",
     "googleapis": "^142.0.0",
     "nodemailer": "^6.9.14",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -41,7 +43,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.11",
     "vite": "^5.2.0"
   }
 }
