--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
-    "@react-pdf/renderer": "^3.4.4",
     "axios": "^1.7.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
@@ -23,12 +20,13 @@
     "framer-motion": "^11.3.28",
     "googleapis": "^142.0.0",
     "nodemailer": "^6.9.14",
-    "pdfjs-dist": "^3.0.279",
+    "pdfjs-dist": "^2.12.313",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "^6.24.0",
     "react-tooltip": "^5.28.0",
     "scrollreveal": "^4.0.9"
